<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailAnimal">

    <RelativeLayout
        android:id="@+id/relativeLayout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/tv_animal_picture"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/develop_by_rangga_saputra"
            android:src="@drawable/hiu_besar"
            android:background="@drawable/layout_bg"/>

        <TextView
            android:id="@+id/tv_animal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/ikan_hiu"
            android:layout_toEndOf="@+id/tv_animal_picture"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_animal_scientific_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            tools:text="@string/scientific_name"
            android:background="@drawable/layout_bg"
            android:textColor="@color/white"
            android:layout_below="@id/tv_animal_name"
            android:textStyle="bold"
            android:layout_toEndOf="@id/tv_animal_picture"/>

        <TextView
            android:id="@+id/tv_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tv_animal_scientific_name"
            android:layout_toEndOf="@id/tv_animal_picture"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_character_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            tools:text="@string/char_1"
            android:layout_toEndOf="@id/tv_animal_picture"
            android:layout_below="@id/tv_character"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_favorit_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makanan_favorit"
            android:layout_below="@id/tv_animal_picture"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="10sp"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_favorit_food_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/ikan_ikan_kecil"
            android:layout_below="@id/tv_favorit_food"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/layout_bg"/>

        <TextView
            android:id="@+id/tv_favorit_food_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/gurita"
            android:layout_below="@id/tv_favorit_food"
            android:layout_toEndOf="@id/tv_favorit_food_1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/layout_bg"/>

        <TextView
            android:id="@+id/tv_favorit_food_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/anjing_laut"
            android:layout_below="@id/tv_favorit_food"
            android:layout_toEndOf="@id/tv_favorit_food_2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/layout_bg"/>

        <TextView
            android:id="@+id/tv_favorit_food_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/penyu_laut"
            android:layout_below="@id/tv_favorit_food"
            android:layout_toEndOf="@id/tv_favorit_food_3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/layout_bg"/>

        <TextView
            android:id="@+id/tv_animal_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_hewan"
            android:layout_below="@id/tv_favorit_food_1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_animal_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_below="@id/tv_animal_desc_title"
            tools:text="@string/describe"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/tv_source_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_animal_desc"
            android:text="@string/sumber_gambar_informasi"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_source_info_1"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_source_info"
            tools:text="@string/www_google_com"
            android:autoLink="web"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/layout_bg"/>



    </RelativeLayout>

</ScrollView>